--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/node": "17.0.45",
     "babel-jest": "28.1.1",
     "jest": "28.1.1",
+    "jest-environment-jsdom": "^28.1.2",
     "ts-jest": "28.0.5",
+    "ts-node": "^10.8.2",
     "typescript": "4.7.4"
   },
   "devDependencies": {
