--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/core": "7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.6",
     "@babel/preset-env": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@babylonjs/core": "5.13.2",
